fix(post): long text content wouldn't wrap around images

--- a/src/views/post/post.module.css
+++ b/src/views/post/post.module.css
@@ -160,7 +160,6 @@
 
 .postDesktop .postMessage, .replyDesktop .postMessage {
   padding: 1em 40px;
-  overflow: hidden;
   word-break: break-word;
 }
 
@@ -334,7 +333,6 @@
 .postMobile .postMessage {
   padding: 10px;
   font-size: var(--post-mobile-content-font-size);
-  overflow: hidden;
   word-break: break-word;
 }
 
